--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3701,7 +3701,29 @@
 		}
 
 	}
+
+/* Portret */
+
+	#banner img {
+		width: 327px;
+		height: 327px;
+		border-radius: 100%;
+	}
+
+	@media screen and (max-width: 1680px) {
+		#banner img {
+			width: 256px;
+			height: 256px;
+		}
+	}
 	
+	@media screen and (max-width: 736px) {
+		#banner img {
+			width: 192px;
+			height: 192px;
+		}
+	}
+
 /* Google Map */
 
 	#footer #map {
@@ -3722,7 +3744,7 @@
 			height: 210px;
 		}
 	}
-/* ! */
+
 	@media screen and (max-width: 980px) {
 		#footer #map {
 			width: 600px;
